--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
             line-height: 1.2;
             margin: 0;
         }
-
+conflictiing with child branch
         html {
             color: #888;
             display: table;
